test/arrays/dmapped-new-error-class.good
dmapped-new-error-class.chpl:14: error: dmapped initialization expression requires a value, not a type - did you mean to use '<domain> dmapped new dmap(new <DistName>(<args>))'?
